--- a/css/login.css
+++ b/css/login.css
@@ -31,7 +31,7 @@ body {
     position: relative;
     z-index: 2;
     width: 350px;
-    height: 500px;
+    /* height: 500px; */ /* Adjusted height to auto, should hopefully be enough */
     background-color: #fff;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     border-radius: 10px;
